# django-mom

./: .gitignore  LICENSE  README.md  pyproject.toml
src/django_mom/: apps.py  migration_utils.py
src/django_mom/management/commands/: makemigrations.py  rewritemigrations.py
