[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "django-mom"
version = "0.1.0"
description = "Migration order management (MOM) for Django apps"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
  "Django>=4.1"
]
classifiers = [
  "Framework :: Django",
  "Programming Language :: Python :: 3"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["django_mom*"]
